# primer-finder

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
notebooks/: 11-vibe-db-connector.ipynb  12-create-mini-db.ipynb  13-test-different-db-methods.ipynb  14-exapmple-regex-for-thesis.ipynb  15-create-benchmark-datasets.ipynb  16-run-benchmarks.ipynb  17-results.ipynb  db_connector_testing.ipynb  orf tests.ipynb  sequence_padding_tests.ipynb  simulate_orf_matching.ipynb  sw-testing.ipynb  test.ipynb
primer_finder/: cli.py
primer_finder/config/: README.md  __init__.py  config_loader.py  constants.py  default_config.yaml
primer_finder/connectors/: base.py  db_connector.py  eyeBOLD_connector.py  factory.py  file_connector.py
primer_finder/matching/: primer_finder.py  regex.py  smith_waterman.py
primer_finder/matching/connectors/: base.py  db_connector.py  factory.py  file_connector.py
primer_finder/matching/dtos/: match_result_dto.py  primer_data_dto.py
primer_finder/orf/: decider.py  finder.py
scripts/: main.py
src/: fna-analysis-playground.ipynb  fna-gz-reader-v1.py  fna-reader-v1.py  match_result.py  orf_finder.py  primer-finder-literally.py  primer_data_dto.py  primer_finder.py  primer_finder_regex.py  smith-waterman.py  smith_waterman.py  test_multiprocessing.py
src/Notebooks/: Smith-Waterman-Result-Analysis.ipynb  compare_mine_to_cutadapt.ipynb  db_connector_testing.ipynb  fna-analysis-playground.ipynb  how_often_is_a_missing_primer_actually_missing.ipynb  orf tests.ipynb  sequence_padding_tests.ipynb  simulate_orf_matching.ipynb  sw-testing.ipynb  test.ipynb
src/config/: constants.py  primer_information.csv
src/playground/: multiprocessing_tests.py
src/primer_matching/: primer_finder.py  primer_finder_regex.py  smith_waterman.py
src/primer_matching/connectors/: db_connector.py  file_connector.py
src/primer_matching/dtos/: primer_data_dto.py
